src/test/deca/syntax/parser/invalid/inst_expr_while_sans_cond.deca
// Parser test, while without condition

{
    while { print(5)};
}